crates/rargc/tests/snapshots/test_scripts__impl-17.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] minus-v.sh -v"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---

args:
- rargs_verbose = 1

